# deep-diff-forge

./: .gitignore  CHANGELOG.md  Cargo.toml  EVIDENCE.md  LICENSE-APACHE  LICENSE-MIT  NOTES.md  README.md  SECURITY.md  deny.toml  justfile  sbom.spdx.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/deep-diff-forge-agent/: Cargo.toml
crates/deep-diff-forge-agent/src/: anchor.rs  lib.rs  store.rs
crates/deep-diff-forge-agent/tests/: flow.rs
crates/deep-diff-forge-cli/: Cargo.toml  README.md
crates/deep-diff-forge-cli/src/: main.rs
crates/deep-diff-forge-cli/tests/: daemon.rs  deploy.rs  review.rs  security.rs  semantic.rs  stdin_patch.rs  syntax_cmds.rs
crates/deep-diff-forge-cluster/: Cargo.toml
crates/deep-diff-forge-cluster/src/: cluster.rs  lib.rs  scheduler.rs
crates/deep-diff-forge-cluster/tests/: run.rs
crates/deep-diff-forge-core/: Cargo.toml
crates/deep-diff-forge-core/src/: deploy.rs  lib.rs  release.rs  util.rs
crates/deep-diff-forge-daemon/: Cargo.toml
crates/deep-diff-forge-daemon/src/: handler.rs  lib.rs  protocol.rs  security.rs  serve.rs
crates/deep-diff-forge-graph/: Cargo.toml
crates/deep-diff-forge-graph/src/: lib.rs  rank.rs  risk.rs
crates/deep-diff-forge-graph/tests/: rank.rs
crates/deep-diff-forge-learning/: Cargo.toml
crates/deep-diff-forge-learning/src/: annotation.rs  error.rs  lib.rs  planner.rs  promote.rs  ranking.rs  receipt.rs  score.rs  store.rs  util.rs
crates/deep-diff-forge-patch/: Cargo.toml
crates/deep-diff-forge-patch/src/: json.rs  lib.rs  parser.rs  render.rs
crates/deep-diff-forge-patch/tests/: fixtures.rs  round_trip.rs
crates/deep-diff-forge-pipeline/: Cargo.toml
crates/deep-diff-forge-pipeline/src/: jsonl.rs  lib.rs  stages.rs
crates/deep-diff-forge-pipeline/tests/: chain.rs
crates/deep-diff-forge-projection/: Cargo.toml
crates/deep-diff-forge-projection/src/: inline.rs  lib.rs  side_by_side.rs
crates/deep-diff-forge-projection/tests/: render.rs
crates/deep-diff-forge-syntax/: Cargo.toml
crates/deep-diff-forge-syntax/src/: analyze.rs  highlight.rs  language.rs  lib.rs  structural.rs
crates/deep-diff-forge-syntax/tests/: files.rs
crates/deep-diff-forge-tui/: Cargo.toml
crates/deep-diff-forge-tui/src/: chrome.rs  command.rs  diffview.rs  input.rs  lib.rs  notes.rs  paint.rs  run.rs  state.rs  theme.rs  tree.rs  ui.rs
docs/: AGENTIC_RUST_CODER_V4.md  API_AND_IPC.md  ARCHITECTURE.md  BASH_API_CONTRACTS.md  CHAINING_AND_CLUSTERING.md  CLAUDE_CODE_BASH_CLI.md  DEEP_DIFF_FORGE_LOOM.md  DEPLOYMENT_FRAMEWORK.md  DEPLOYMENT_GAP_ANALYSIS.md  DIMENSIONAL_EXECUTION_MODEL.md  END_TO_END_DEPLOYMENT.md  FEATURE_BASELINE.md  FEATURE_DEPLOYABILITY_MATRIX.md  HERMES_AGENT_PERSONA.md  LEARNING_LOOP.md  MAKING_SKILLS.md  MODULE_STRUCTURE_PLAN.md  OPERATIONS_AND_DAEMON.md  PERFORMANCE_AND_NOVELTY.md  PIONEER_FEATURE_SPECS.md  PROBLEM_SOLVER_GOD_TIER_SETUP.md  REFACTOR_PLAN_S1008412.md  RELEASE_AND_PUBLICATION.md  ROADMAP.md  RUST_IMPLEMENTATION_STRATEGY.md  SCHEMATICS.md  STORAGE_AND_10TB_CORPUS.md  TESTING_GOLD_STANDARD.md  VISION.md
fixtures/patch/: basic.patch  binary.patch  delete_file.patch  new_file.patch  no_newline.patch  rename.patch
fuzz/: Cargo.toml
fuzz/fuzz_targets/: agent_annotation.rs  daemon_protocol.rs  patch_parser.rs  review_json.rs
scripts/security/: daemon_soak.py  generate_spdx_sbom.py  mutation_gate.sh  privacy_probe.py
