[workspace]
members = [
  "crates/deep-diff-forge-core",
  "crates/deep-diff-forge-patch",
  "crates/deep-diff-forge-projection",
  "crates/deep-diff-forge-pipeline",
  "crates/deep-diff-forge-syntax",
  "crates/deep-diff-forge-graph",
  "crates/deep-diff-forge-agent",
  "crates/deep-diff-forge-tui",
  "crates/deep-diff-forge-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Louranicas/deep-diff-forge"
rust-version = "1.85"
