[package]
name = "deep-diff-forge-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
deep-diff-forge-agent = { path = "../crates/deep-diff-forge-agent" }
deep-diff-forge-core = { path = "../crates/deep-diff-forge-core" }
deep-diff-forge-daemon = { path = "../crates/deep-diff-forge-daemon" }
deep-diff-forge-patch = { path = "../crates/deep-diff-forge-patch", features = ["json"] }
libfuzzer-sys = "0.4"
serde_json = "1"

[[bin]]
name = "patch_parser"
path = "fuzz_targets/patch_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "review_json"
path = "fuzz_targets/review_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "daemon_protocol"
path = "fuzz_targets/daemon_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "agent_annotation"
path = "fuzz_targets/agent_annotation.rs"
test = false
doc = false
bench = false
