[package]
name = "deep-diff-forge-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent annotation protocol: provenance, grounding classification, sanitization, anchor validation."

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core", version = "0.1.0" }

[dev-dependencies]
deep-diff-forge-patch = { path = "../deep-diff-forge-patch", version = "0.1.0" }
