[package]
name = "deep-diff-forge-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Agent annotation protocol: provenance, grounding classification, sanitization, anchor validation."

[dependencies]
deep-diff-forge-core.workspace = true

[dev-dependencies]
deep-diff-forge-patch.workspace = true
