[package]
name = "deep-diff-forge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "deep-diff-forge"
path = "src/main.rs"

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core", version = "0.1.0" }
deep-diff-forge-patch = { path = "../deep-diff-forge-patch", version = "0.1.0" }
deep-diff-forge-projection = { path = "../deep-diff-forge-projection", version = "0.1.0" }
deep-diff-forge-pipeline = { path = "../deep-diff-forge-pipeline", version = "0.1.0" }
deep-diff-forge-syntax = { path = "../deep-diff-forge-syntax", version = "0.1.0" }
deep-diff-forge-graph = { path = "../deep-diff-forge-graph", version = "0.1.0" }
deep-diff-forge-tui = { path = "../deep-diff-forge-tui", version = "0.1.0" }
deep-diff-forge-cluster = { path = "../deep-diff-forge-cluster", version = "0.1.0" }
deep-diff-forge-daemon = { path = "../deep-diff-forge-daemon", version = "0.1.0" }

