[package]
name = "deep-diff-forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deep-Diff-Forge: a deterministic, agent-collaborative diff and code-review engine (the `deep-diff-forge` CLI)."

[[bin]]
name = "deep-diff-forge"
path = "src/main.rs"

[dependencies]
deep-diff-forge-core.workspace = true
deep-diff-forge-patch.workspace = true
deep-diff-forge-projection.workspace = true
deep-diff-forge-pipeline.workspace = true
deep-diff-forge-syntax.workspace = true
deep-diff-forge-graph.workspace = true
deep-diff-forge-tui.workspace = true
deep-diff-forge-cluster.workspace = true
deep-diff-forge-learning.workspace = true
deep-diff-forge-daemon.workspace = true
