[package]
name = "deep-diff-forge-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bounded parallel dimensional execution with deterministic joins and receipts."

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core", version = "0.1.0" }
deep-diff-forge-graph = { path = "../deep-diff-forge-graph", version = "0.1.0" }

[dev-dependencies]
deep-diff-forge-patch = { path = "../deep-diff-forge-patch", version = "0.1.0" }
