[package]
name = "deep-diff-forge-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bounded parallel dimensional execution with deterministic joins and receipts."

[dependencies]
deep-diff-forge-core.workspace = true
deep-diff-forge-graph.workspace = true

[dev-dependencies]
deep-diff-forge-patch.workspace = true
