[package]
name = "deep-diff-forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core review-model vocabulary for Deep-Diff-Forge: patch/semantic twins, execution plan, deployment and release types."

[dependencies]

[lints]
workspace = true
