[package]
name = "deep-diff-forge-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Optional UDS JSON-RPC review daemon for Deep-Diff-Forge (std-first, no async runtime)."

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core", version = "0.1.0" }
deep-diff-forge-patch = { path = "../deep-diff-forge-patch", version = "0.1.0" }
deep-diff-forge-graph = { path = "../deep-diff-forge-graph", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
