[package]
name = "deep-diff-forge-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Optional UDS JSON-RPC review daemon for Deep-Diff-Forge (std-first, no async runtime)."

[dependencies]
deep-diff-forge-core.workspace = true
deep-diff-forge-patch.workspace = true
deep-diff-forge-graph.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
