[package]
name = "deep-diff-forge-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Review Intelligence Graph: deterministic, explainable risk ranking of a review."

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core", version = "0.1.0" }

[dev-dependencies]
deep-diff-forge-patch = { path = "../deep-diff-forge-patch", version = "0.1.0" }
