[package]
name = "deep-diff-forge-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Review Intelligence Graph: deterministic, explainable risk ranking of a review."

[dependencies]
deep-diff-forge-core.workspace = true

[dev-dependencies]
deep-diff-forge-patch.workspace = true

[lints]
workspace = true
