[package]
name = "deep-diff-forge-learning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "L9 learning loop for Deep-Diff-Forge: local-only strategy receipts, scoring, and gated promotion of planner/ranking/annotation defaults."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
