[package]
name = "deep-diff-forge-patch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Canonical unified/Git patch parser, renderer, and JSON projection for Deep-Diff-Forge."

[features]
default = ["json"]
# JSON projection of the parsed patch model. Hand-rolled, zero external deps to
# preserve the workspace's zero-dependency posture; serde is the future upgrade
# once the projection crate lands.
json = []

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core", version = "0.1.0" }
