[package]
name = "deep-diff-forge-patch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Canonical unified/Git patch parser, renderer, and JSON projection for Deep-Diff-Forge."

[features]
default = ["json"]
# JSON projection of the parsed patch model. Hand-rolled, zero external deps to
# preserve the workspace's zero-dependency posture; serde is the future upgrade
# once the projection crate lands.
json = []

[dependencies]
deep-diff-forge-core.workspace = true
