[package]
name = "deep-diff-forge-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Composable Unix-filter pipeline stages (ingest, render, JSONL) for Deep-Diff-Forge."

[dependencies]
deep-diff-forge-core.workspace = true
deep-diff-forge-patch.workspace = true
deep-diff-forge-projection.workspace = true

[lints]
workspace = true
