[package]
name = "deep-diff-forge-projection"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Renderer-neutral projections (inline, side-by-side) of the Deep-Diff-Forge review model."

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core" }

[dev-dependencies]
deep-diff-forge-patch = { path = "../deep-diff-forge-patch" }
