[package]
name = "deep-diff-forge-projection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Renderer-neutral projections (inline, side-by-side) of the Deep-Diff-Forge review model."

[dependencies]
deep-diff-forge-core.workspace = true

[dev-dependencies]
deep-diff-forge-patch.workspace = true
