[package]
name = "deep-diff-forge-syntax"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tree-sitter language detection, parsing under budgets, and symbol extraction for Deep-Diff-Forge."

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core", version = "0.1.0" }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
