[package]
name = "deep-diff-forge-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Tree-sitter language detection, parsing under budgets, and symbol extraction for Deep-Diff-Forge."

[dependencies]
deep-diff-forge-core.workspace = true
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
