[package]
name = "deep-diff-forge-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Tree-sitter language detection, parsing under budgets, and symbol extraction for Deep-Diff-Forge."

[dependencies]
deep-diff-forge-core.workspace = true
# Pinned to exact versions: these crates ship a `cc`-driven build script that
# compiles C at build time, so a malicious in-range patch release must not be
# auto-resolved. Bump deliberately; `cargo install --locked` is recommended.
tree-sitter = "=0.25.10"
tree-sitter-rust = "=0.24.2"

[lints]
workspace = true
