[package]
name = "deep-diff-forge-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Review-first terminal UI for Deep-Diff-Forge: app state, input mapping, and ratatui rendering."

[dependencies]
deep-diff-forge-core = { path = "../deep-diff-forge-core", version = "0.1.0" }
deep-diff-forge-graph = { path = "../deep-diff-forge-graph", version = "0.1.0" }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
deep-diff-forge-patch = { path = "../deep-diff-forge-patch", version = "0.1.0" }
