[package]
name = "deep-diff-forge-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Review-first terminal UI for Deep-Diff-Forge: app state, input mapping, and ratatui rendering."

[dependencies]
deep-diff-forge-core.workspace = true
deep-diff-forge-graph.workspace = true
deep-diff-forge-projection.workspace = true
deep-diff-forge-syntax.workspace = true
deep-diff-forge-agent.workspace = true
deep-diff-forge-cluster.workspace = true
deep-diff-forge-learning.workspace = true
deep-diff-forge-patch.workspace = true
deep-diff-forge-daemon.workspace = true
ratatui = "0.29"
crossterm = "0.28"

[lints]
workspace = true
